fixed z-index that was causing highlights to not be shown on some publications with background colors

--- a/injectables/style/style.css
+++ b/injectables/style/style.css
@@ -28,7 +28,7 @@
 .R2_CLASS_HIGHLIGHT_AREA[data-marker="0"] {
     background-color: var(--RS__highlightColor) !important;
     mix-blend-mode: var(--RS__highlightMixBlendMode) !important;
-    z-index: -10;
+    z-index: 1;
 }
 .R2_CLASS_HIGHLIGHT_AREA[data-marker="0"]:hover,
 .R2_CLASS_HIGHLIGHT_AREA[data-marker="0"].hover {
@@ -38,7 +38,7 @@
 .R2_CLASS_HIGHLIGHT_AREA[data-marker="1"] {
     border-bottom: 2px solid var(--RS__underlineBorderColor);
     mix-blend-mode: var(--RS__highlightMixBlendMode) !important;
-    z-index: -10;
+    z-index: 1;
 }
 .R2_CLASS_HIGHLIGHT_AREA[data-marker="1"]:hover,
 .R2_CLASS_HIGHLIGHT_AREA[data-marker="1"].hover {
@@ -48,48 +48,72 @@
 [data-tts-current-word="true"][data-tts-color="orange"] {
     background: rgba(255, 165, 0, 0.5) !important;
     border-bottom: solid 2px rgb(255, 165, 0) !important;
+    z-index: 2;
+    position: relative;
 }
 [data-tts-current-line="true"][data-tts-color="orange"] {
     background: rgba(255, 165, 0, 0.5) !important;
+    z-index: 2;
+    position: relative;
 }
 
 
 [data-tts-current-word="true"][data-tts-color="red"] {
     background: rgba(255,0,0,0.5) !important;
     border-bottom: solid 2px rgba(255,0,0) !important;
+    z-index: 2;
+    position: relative;
 }
 [data-tts-current-line="true"][data-tts-color="red"] {
     background: rgba(255,0,0,0.5) !important;
+    z-index: 2;
+    position: relative;
 }
 
 [data-tts-current-word="true"][data-tts-color="blue"] {
     background: rgba(0,0,255,0.5) !important;
     border-bottom: solid 2px rgba(0,0,255) !important;
+    z-index: 2;
+    position: relative;
 }
 [data-tts-current-line="true"][data-tts-color="blue"] {
     background: rgba(0,0,255,0.5) !important;
+    z-index: 2;
+    position: relative;
 }
 
 [data-tts-current-word="true"][data-tts-color="purple"] {
     background: rgba(102,0,153,0.5) !important;
     border-bottom: solid 2px rgba(102,0,153) !important;
+    z-index: 2;
+    position: relative;
 }
 [data-tts-current-line="true"][data-tts-color="purple"] {
     background: rgba(102,0,153,0.5) !important;
+    z-index: 2;
+    position: relative;
 }
 
 [data-tts-current-word="true"][data-tts-color="green"] {
     background: rgba(0,102,0,0.5) !important;
     border-bottom: solid 2px rgba(0,102,0) !important;
+    z-index: 2;
+    position: relative;
 }
 [data-tts-current-line="true"][data-tts-color="green"] {
     background: rgba(0,102,0,0.5) !important;
+    z-index: 2;
+    position: relative;
 }
 
 [data-tts-current-word="true"][data-tts-color="gray"] {
     background: rgba(85,85,85,0.5) !important;
     border-bottom: solid 2px rgba(85,85,85) !important;
+    z-index: 2;
+    position: relative;
 }
 [data-tts-current-line="true"][data-tts-color="gray"] {
     background: rgba(85,85,85,0.5) !important;
+    z-index: 2;
+    position: relative;
 }
